# wallet

./: .gitmodules  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/gig8/wallet/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/gig8/wallet/: MainActivity.java
app/src/main/res/menu/: menu_main.xml
app/src/test/java/com/gig8/wallet/: ExampleUnitTest.java
coinj/: CMakeLists.txt  build.gradle
coinj/src/androidTest/java/com/gig8/coinj/: ExampleInstrumentedTest.java
coinj/src/main/: AndroidManifest.xml
coinj/src/main/cpp/: native-crypto.cpp  native-x13.cpp
coinj/src/main/java/com/gig8/coinj/: Crypto.java  X13.java
coinj/src/main/java/org/bitcoin/: Secp256k1Context.java
coinj/src/main/java/org/bitcoinj/core/: Block.java  NetworkParameters.java  Transaction.java
coinj/src/main/java/org/bitcoinj/params/: MainNetParams.java  RegTestParams.java  TestNet3Params.java  UnitTestParams.java
coinj/src/main/java/org/bitcoinj/store/: SPVBlockStore.java  WindowsMMapHack.java
coinj/src/main/res/values/: strings.xml
coinj/src/test/java/com/gig8/coinj/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
